--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -46,48 +46,49 @@ body {
 	font-family: 'Intel', serif;
 	font-size: 18px;
 	font-weight: 400;
-	Align: center;
+	align-items: center;
 	background: black;
 	color:rgb(255, 255, 255)
-	
-	
 }
 
-
 .container{ 
-	max: 1440px;
+	width: 1440px;
 	margin: 0 auto;
 	padding: 0 20px;
 }
+
+
 /*Header styles start*/
 	
 
 .header__container{
+	height: 90px;
 	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
 	justify-content: space-between;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	max-width: 1440px;
-    margin: 0 auto;
+	
+
+	background-image: url('./assets/img/jpg/intro-bg.jpg');
+	background-repeat: no-repeat;
+	background-position: top;
+	border: 0;
   }
 
 
 .header__logo{
-	padding-left: 20px;
-	
-
+	transition: 0.3s;
 }
 
-.header__main{
-	display: flex;
-}
+.header__logo:hover {
+	filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+	}
+
 
 .header__nav{
-
 	display: flex;
 	flex-wrap: wrap;
+	margin-left: auto;
 	width: 500px;
 	height: 50px;
 }
@@ -111,6 +112,7 @@ body {
 	font-size: 20px;
 	color:white;
 	text-decoration: none;
+	transition: 0.3s;
 }
 .header__link:hover, .header__link:focus, .header__link:active{
 	color:#BDAE82
@@ -126,28 +128,27 @@ body {
 /*Header styles end*/
 
 .main {
-    margin-bottom: auto;
+    margin-bottom: 100px;
 	position: relative;
 }
 
-
 /*Hero styles start*/
 
-.hero{
-	min-height: 100vh;
+.hero__container{
+	height: 820px;
 	display: flex;
-	align-items: flex-start;
 	flex-direction:column ;
-	height: 100vh;
-	background: url(../portfolio/assets/img/jpg/intro-bg.jpg) no-repeat center;
-	background-size: cover;
+	background-image: url(../portfolio/assets/img/jpg/intro-bg.jpg);background-position: center -90px;
+  	background-repeat: no-repeat;
+	border:0;
 	padding-top: 160px;
-	max-width: 1440px;
+	padding: 0px 160 0px 0px;
 }
 
 .hero__info{
-	padding-left: 80px;
-	margin-top: 0px;
+	margin-left: 80px;
+	width: 500px;
+
 }
 .hero__title{
 	font-family: Merriweather;
@@ -155,35 +156,45 @@ body {
 	font-weight: 700;
 	font-size: 60px;
 	line-height: 120px;
-	margin-bottom: 10px;
-	width: 500px;
-	margin-top: 0px;
+	height: 120px;
+	margin: 0px;
 }
 
 .hero__subtitle{
 	font-family: Inter;
 	font-size: 20px;
 	line-height: 40px;
-	max-width: 470px;
+	padding-top: 10px;
+	width: 470px;
 	height: 120px;
-	margin-bottom: 25px;
-	margin-top: 0px;
+	margin: 0px; 
 }
 
-.bt__hero{
-	padding: 8px 72px;
+.bt__solid{
+	padding: 0px;
 	font-family: Inter;
 	font-size: 20px;
 	line-height: 40px;
 	color:black;
 	background-color:#BDAE82;
+	cursor: pointer;
 	text-align: center;
 	border: none;
+	margin-top: 25px;
+	transition: 0.3s;
+	height: 55px;
+	width: 220px;
+	
 }
 
-.bt__hero:hover {
+.bt__solid:hover {
 	color: white;
 }
+
+
+
+
+
 
 /*Hero styles end*/
 
@@ -191,59 +202,72 @@ body {
 
 .skills{
 	height: 482px;
+	padding-top: 100px;
 
 }
-.section__title{
-	padding: 100px 370px 60px 370px;
+
+.section__title {
+	display: flex;
+	justify-content: center;
+	height: 80px;
+	margin-bottom: 60px;
+	
 }
-.skills__title{
+.title{
+	display: flex;
+	justify-content: center;
+	position: relative;
+	align-items: center;
 	font-family: Merriweather;
 	font-weight: 700;
 	font-size: 40px;
 	line-height: 80px;
 	text-align: center;
 	color:#BDAE82;
-	margin:0;
+	width: 50%;
 
 }
 
-.skills__title span {
+.title::before{
+	background-color: #BDAE82;
+	content:"";
+	display: block;
+	position: absolute;
+	top: 50%;
+	height: 4px;
+	width: 100%;
+	z-index: -1;
+}
+
+.title__text{
+	background-color:rgb(0, 0, 0);
+	padding: 0 20px;
+}
+
+.skills__items{
 	display: flex;
-	flex-direction: row;
-	position: relative;
-	width: 700px;
+  	justify-content: space-between;
+  	flex-wrap: wrap;
 }
-
-
-
-.skills__title span:before, .skills__title span:after {
-	content: "";
-		flex: 1 1;
-		border-bottom: 2px solid #BDAE82;
-		margin: 20px;
-		width: 700px;
-		align-items: flex-start;
-
-}
-
-.section__item{
+.skill__item{
 	display: inline-block;
 	width:320px;
 	height: 240px;
 	justify-content: center;
 	align-items: center;
-
-
-
+	background-position: center top;
+	padding: 0px 20px;
 }
+
+
 .item__title{
 	font-family: Inter;
 	font-weight: 700;
 	font-size: 20px;
 	line-height: 40px;
 	text-align: center;
-	margin-bottom: 20px;
-	margin-top: 0px
+	padding-top: 50px;
+	margin: 0;
 }
 
 .item__subtitle{
@@ -253,9 +277,203 @@ body {
 	line-height: 36px;
 	text-align: center;
 	color: #FFFFFF;
+	padding-top: 20px;
+	margin: 0;
 }
 
 .items__icon{
 	align-items: center;
-	margin-bottom: 50px;
+	transition: 0.3s;
+	justify-content: center;
+	position: relative;
+	left: 40%;
 }
+	
+.items__icon:hover {
+	filter: invert(100%) sepia(0%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+}
+
+
+.portfolio{
+	height: 1500px;
+	padding-top: 100px;
+
+}
+
+.button__items{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	align-items: center;
+
+}
+
+
+.bt__border{
+	font-family: Inter;
+	font-size: 20px;
+	line-height: 40px;
+	color:#BDAE82;
+	background-color: transparent;
+	cursor: pointer;
+	text-align: center;
+	border-color:#BDAE82;
+	margin-right: 5px;
+	height: 55px;
+	width: 220px;
+	padding: 0px;
+
+}
+
+.bt__border:hover {
+	color: rgb(0, 0, 0);
+	background-color:#BDAE82;
+}
+
+.portfolio__items{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items:center;
+	gap: 10px;
+	padding-top: 60px;
+	margin: 0px;
+}
+
+
+
+.video{
+	height: 945px;
+	padding-top: 100px;
+}
+
+.video__player{
+	position: relative;
+  	display: flex;
+ 	justify-content: center;
+ 	align-items: center;
+}
+
+.bt__player{
+	position: absolute;
+	background-image: url(/lizaveta01-JSFEPRESCHOOL/portfolio/assets/img/svg/Play_hover.svg);
+	width: 129.86px;
+	height: 130px;
+	border:0px;
+	background-color: transparent;
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+.bt__player:hover {
+	filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+	}
+
+.price{
+	height: 845px;
+	padding-top: 100px;
+}
+
+.price__items{
+	display: flex;
+	justify-content: center;
+	gap: 25px;
+	align-items: center;
+}
+
+.price__item{
+	display: flex;
+	flex-direction: column;
+	height: 505px;
+	width: 450px;
+	border: 2px;
+	border-style: solid;
+	border-color: #BDAE82;
+	
+}
+
+.price__title{
+	font-family: Merriweather;
+	font-weight: 700;
+	font-size: 28px;
+	line-height: 56px;
+	text-align: center;
+	color: #FFFFFF;
+	padding-top: 43px;
+	margin: 0px;
+}
+
+.price__value{
+	font-family: Merriweather;
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 48px;
+	text-align: center;
+	color: #BDAE82;
+	padding-top: 20px;
+	margin: 0px;
+}
+
+.price__info{
+	display: flex;
+	flex-direction: column;
+	font-family: Inter;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 36px;
+	text-align: center;
+	color: #FFFFFF;
+	padding-top: 20px;
+	margin: 0px;
+}
+
+.bt__price{
+	padding: 0px;
+	font-family: Inter;
+	font-size: 20px;
+	line-height: 40px;
+	color:black;
+	background-color:#BDAE82;
+	cursor: pointer;
+	text-align: center;
+	border: none;
+	margin-top: 40px;
+	transition: 0.3s;
+	height: 55px;
+	width: 220px;
+	position: relative;
+	left: 50%;
+	transform: translate(-50%, 0);
+	
+}
+
+.bt__price:hover {
+	color: white;
+}
+
+
+
+
+
+
+
+.contacts{
+	height: 700px;
+	padding-top: 100px;
+	background-image: url(../portfolio/assets/img/jpg/contacts.jpg);background-position: center -90px;
+  	background-repeat: no-repeat;
+	border:0;
+}
+
+.footer{
+	height: 150px;
+}
+
+.footer__container{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0 auto;
+	color: #fff;
+}
+
