--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -41,13 +41,14 @@ body {
 	min-width: 320px;
 	min-height: 100vh;
 	margin: 0;
-	padding: 0;
+	padding: 0 20px;
 	font-family: 'Intel', serif;
 	font-size: 18px;
 	font-weight: 400;
 	align-items: center;
 	background: black;
-	color:rgb(255, 255, 255)
+	color:rgb(255, 255, 255);
+	width: 1440px;
 }
 
 .container{ 
@@ -68,6 +69,7 @@ body {
 	background-repeat: no-repeat;
 	background-position: top;
 	border: 0;
+
   }
 
 .header__logo{
