--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -48,15 +48,28 @@ body {
 	align-items: center;
 	background: black;
 	color:rgb(255, 255, 255);
-	width: 1440px;
 }
-
+body.lock {
+    overflow: hidden;
+}
+body.lock::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+}
 .container{ 
 	width: 1440px;
 	margin: 0 auto;
-	padding: 0 20px;
 }
-
+@media (max-width: 768px){
+	.container{
+		width: 767px;
+	}
+}
 /*Header styles start*/
 
 .header__container{
@@ -69,12 +82,68 @@ body {
 	background-repeat: no-repeat;
 	background-position: top;
 	border: 0;
-
+	padding-left: 0px;
+	padding-right: 0px;
+	margin: 0px 20px;
   }
 
+  @media (max-width: 768px){
+	.header__container{
+		margin: 0px;
+		background-color:black;
+    background-size: auto 551px;
+    background-repeat: no-repeat;
+	}
+  }
+  .hamburger{
+	display: none;
+	background: none;
+	border: none;
+	flex-direction: column;
+	 justify-content: center;
+	 align-items: center;
+	 cursor: pointer;
+	 user-select: none;
+	width: 50px;
+	height: 50px;
+	z-index: 5;	
+	margin-right: 64px;
+	margin-left: 20px;
+}
+@media (max-width: 768px){
+	.hamburger{
+		display: flex;
+	}
+}
+.line {
+	display: block;
+	width: 50px;
+	height: 3px;
+	background-color: white;
+	margin: 4px auto;
+	z-index: 15;
+	transition: all 0.3s ease-in-out;
+  }
+.hamburger.open .line1 {
+	transform: rotate(-45deg) translate(-4px, 10px);
+  }
+  
+.hamburger.open .line2 {
+	opacity: 0;
+  }
+  
+.hamburger.open .line3 {
+	transform: rotate(45deg) translate(-6px, -10px);
+  }
 .header__logo{
 	transition: 0.3s;
 	cursor: pointer;
+}
+@media (max-width: 768px){
+	.header__logo{
+		margin-left: 60px;
+		margin-right: 442px;
+	}
 }
 
 .header__logo:hover {
@@ -89,17 +158,56 @@ body {
 	width: 500px;
 	height: 50px;
 }
-
+@media (max-width: 768px){
+	.header__nav{
+	width: 620px;
+	position: absolute;
+    top: 0;
+    right: 0;
+    height: 1024px;
+    transform: scale(0, 1) translate(0%, 0);
+    transition: transform .4s ease-in-out;
+    transform-origin: right;
+    animation: burgerMenu .4s linear;
+	z-index: 3;
+	}
+}
+@media (max-width: 768px){
+	.header__nav.open{
+		transform: scale(1) translate(0%, 0%);
+	}
+}
 .header__list{
 	display: flex;
-	flex-wrap: wrap;
 	justify-content: flex-end;
 	padding-inline-start: 30px;
 	list-style: none;
 }
 
+@media (max-width: 768px) {
+	.header__list {
+		padding: 150px 125px;
+		position: absolute;
+		right: 0;
+		margin: 0;
+		width: 620px;
+		flex-direction: column;
+		gap: 16px;
+    	margin-left: auto;
+		padding-top: 134px;
+    	background-color: black;
+   		overflow-y: scroll;
+	}
+}
+
 .header__item{
 	margin-right: 30px;
+}
+@media (max-width: 768px){
+	.header__item{
+		
+    
+	}
 }
 
 .header__link{
@@ -112,17 +220,45 @@ body {
 	transition: 0.3s;
 }
 
+@media (max-width: 768px){
+	.header__link{
+		font-size: 34px;
+		line-height: 72px;
+		
+	}
+}
 .header__link:hover, .header__link:focus, .header__link:active{
 	color:#BDAE82
 }
-
+.header__link__lang{
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 20px;
+	color:white;
+	text-decoration: none;
+	transition: 0.3s;
+}
+.header__link__lang:hover, .header__link__lang:focus, .header__link:active{
+	color:#BDAE82
+}
 .header__lang{
 	display: flex;
 	justify-content: space-between;
 	width: 70px;
 	align-items: center;
 }
-
+/*@media (max-width: 768px){
+.icon-menu {
+    display: block;
+    position: fixed;
+    right: 24px;
+    top: 36px;
+    width: 32px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 5;
+}*/
 /*Header styles end*/
 
 .main {
@@ -135,18 +271,32 @@ body {
 	height: 820px;
 	display: flex;
 	flex-direction:column ;
-	background-image: url(../portfolio/assets/img/jpg/intro-bg.jpg);background-position: center -90px;
+	background-image: url(../portfolio/assets/img/jpg/intro-bg.jpg);
+	background-position: center -90px;
   	background-repeat: no-repeat;
+	background-size: 125%;
 	border:0;
 	padding-top: 160px;
 	padding: 0px 160 0px 0px;
 }
+@media (max-width: 768px){
+	.hero__container{
+		height: 500px ;
+		padding-top: 78px;
+		background-position: -5px -120px;
+		background-size: auto 620px;
+	}	
+	}
 
 .hero__info{
-	margin-left: 60px;
+	margin-left: 80px;
 	width: 500px;
-
 }
+@media (max-width: 768px){
+	.hero__info{
+		margin-left: 60px ;
+	}	
+	}
 .hero__title{
 	font-family: Merriweather;
 	font-style: normal;
@@ -156,16 +306,30 @@ body {
 	height: 120px;
 	margin: 0px;
 }
+@media (max-width: 768px){
+	.hero__title{
+		font-size: 32px;
+		line-height: 64px;
+		height: 72px;
+	}	
+	}
 
 .hero__subtitle{
 	font-family: Inter;
 	font-size: 20px;
 	line-height: 40px;
-	padding-top: 10px;
 	width: 470px;
 	height: 120px;
-	margin: 0px; 
+	margin-top: 10px; 
 }
+@media (max-width: 768px){
+	.hero__subtitle{
+		font-size: 20px;
+		line-height: 24px;
+		margin-bottom: 15px;
+		width: 390px;
+	}	
+	}
 
 .bt__solid{
 	padding: 0px;
@@ -177,11 +341,16 @@ body {
 	cursor: pointer;
 	text-align: center;
 	border: none;
-	margin-top: 25px;
+	margin-top: 5px;
 	transition: 0.3s;
 	height: 55px;
 	width: 220px;
 }
+@media (max-width: 768px){
+	.bt__solid{
+		margin-top: 0px;
+	}	
+	}
 
 .bt__solid:hover {
 	color: white;
@@ -195,14 +364,23 @@ body {
 	height: 482px;
 	padding-top: 100px;
 }
-
+@media (max-width: 768px){
+	.skills {
+		padding-top: 80px;
+		height: 729px;
+	}	
+	}
 .section__title {
 	display: flex;
 	justify-content: center;
 	height: 80px;
 	margin-bottom: 60px;
 }
-
+@media (max-width: 768px){
+	.section__title {
+		margin-bottom: 36px;
+	}
+	}
 .title{
 	display: flex;
 	justify-content: center;
@@ -216,6 +394,14 @@ body {
 	color:#BDAE82;
 	width: 50%;
 }
+@media (max-width: 768px){
+	.title {
+		font-size: 32px;
+		line-height: 40px;
+	}	
+	}
+
+
 
 .title::before{
 	background-color: #BDAE82;
@@ -238,8 +424,21 @@ body {
   	justify-content: space-between;
   	flex-wrap: wrap;
 }
+@media (max-width: 768px){
+	.skills__items{
+		width: 728px;
+		height: 520px;
+		padding-left: 61px;
+		padding-right: 24px;
+		
+		
+	}
+	}
+
 .skill__item{
-	display: inline-block;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	width:320px;
 	height: 240px;
 	justify-content: center;
@@ -247,6 +446,13 @@ body {
 	background-position: center top;
 	padding: 0px 20px;
 }
+@media (max-width: 768px){
+	.skill__item{
+		
+		width: 300px;
+		height: 224px;
+	}
+	}
 
 .item__title{
 	font-family: Inter;
@@ -257,6 +463,12 @@ body {
 	padding-top: 50px;
 	margin: 0;
 }
+@media (max-width: 768px){
+	.item__title {
+		padding-top: 30px;
+		width: 280px;
+	}
+	}
 
 .item__subtitle{
 	font-family: Inter;
@@ -268,13 +480,21 @@ body {
 	padding-top: 20px;
 	margin: 0;
 }
+@media (max-width: 768px){
+	.item__subtitle {
+		line-height: 22px;
+		padding-top: 20px;
+		width: 280px;
+		height: 44px;
+		margin-bottom: 40px;
+	}
+	}
 
 .items__icon{
 	align-items: center;
 	transition: 0.3s;
 	justify-content: center;
 	position: relative;
-	left: 40%;
 }
 	
 /*Skills styles end*/
@@ -285,14 +505,25 @@ body {
 	height: 1500px;
 	padding-top: 100px;
 }
-
+@media (max-width: 768px){
+	.portfolio {
+		padding-top: 80px;
+		height: 3870px;
+	}
+	}
 .button__items{
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
 	align-items: center;
 }
-
+@media (max-width: 768px){
+	.button__items {
+		margin-top: 50px;
+		padding-left: 102px;
+		padding-right: 97px;
+	}
+	}
 .bt__border{
 	font-family: Inter;
 	font-size: 20px;
@@ -331,17 +562,34 @@ body {
 	height: 945px;
 	padding-top: 100px;
 }
-
+@media (max-width: 768px){
+	.video {
+		padding-top: 80px;
+		height: 628px;
+	}
+	}
 .video__player{
 	position: relative;
   	display: flex;
  	justify-content: center;
  	align-items: center;
 }
+@media (max-width: 768px){
+.video__player{
+	 padding-top: 14px;
+	 
+}
+}
+@media (max-width: 768px){
+.video__player img{
+	 height: 418px;
+	 width: 768px;
+}
+}
 
 .bt__player{
 	position: absolute;
-	background-image: url(/lizaveta01-JSFEPRESCHOOL/portfolio/assets/img/svg/Play_hover.svg);
+	background-image: url(assets/img/svg/Play_hover.svg);
 	width: 129.86px;
 	height: 130px;
 	border:0px;
@@ -349,6 +597,14 @@ body {
 	cursor: pointer;
 	transition: 0.3s;
 }
+@media (max-width: 768px){
+	.bt__player{
+		background-size:75px;
+		background-repeat: no-repeat;
+		height: 75px;
+	}
+	}
+
 
 .bt__player:hover {
 	filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
@@ -362,13 +618,25 @@ body {
 	height: 845px;
 	padding-top: 100px;
 }
-
+@media (max-width: 768px){
+	.price {
+		padding-top: 80px;
+		height: 1905px;
+	}
+	}
 .price__items{
 	display: flex;
 	justify-content: center;
 	gap: 25px;
 	align-items: center;
 }
+@media (max-width: 768px){
+	.price__items {
+		flex-direction: column;
+		padding-top: 14px;
+		gap: 50px;
+	}
+	}
 
 .price__item{
 	display: flex;
@@ -379,6 +647,11 @@ body {
 	border-style: solid;
 	border-color: #BDAE82;
 }
+@media (max-width: 768px){
+	.price__item {
+		width: 420px;
+	}
+	}
 
 .price__title{
 	font-family: Merriweather;
@@ -452,10 +725,27 @@ body {
 	flex-direction: column;
 	align-items: flex-end;
 }
+@media (max-width: 768px){
+	.contacts {
+		align-items: center;
+		background-size: auto 600px;
+		background-repeat: no-repeat;
+		padding-top: -20px;
+		background-position: top;
+		height: 600px;
+	}
+	}
 
 .contact__container {
 	width: 450px;
+	margin-right: 20px;
 }
+@media (max-width: 768px){
+	.contact__container {
+		margin-right: 0px;
+		
+	}
+	}
 
 .title__contact{
 	display: flex;
@@ -473,8 +763,17 @@ body {
 	margin-top: 60px;
 	margin-bottom: 40px;
 	height: 80px;
+	margin-right: 20px;
 }
-
+@media (max-width: 768px){
+	.title__contact {
+		justify-content: center;
+		font-size: 32px;
+		line-height: 64px;
+		justify-content: center;
+		height: 64px;
+	}
+	}
 .input__text{
 	height: 50px;
 	width: 450px;
@@ -523,6 +822,21 @@ body {
 	left: 50%;
 	transform: translate(-100%, 0);
 }
+@media (max-width: 768px){
+	.bt__contact {
+		align-items: center;
+		margin-left: 115px;
+	}
+	}
+@media (max-width: 768px){
+	.title__contact {
+		justify-content: center;
+		font-size: 32px;
+		line-height: 64px;
+		justify-content: center;
+		height: 64px;
+	}
+	}
 
 .bt__contact:hover {
 	color: white;
@@ -538,6 +852,14 @@ body {
 	padding-bottom: 50px;
 	width: 1440px;
 }
+@media (max-width: 768px){
+	.footer {
+		flex-wrap: wrap;
+		width: 768px;
+		padding: 0px 279px;
+		height: 190px;
+	}
+	}
 
 .footer__container{
 	display: flex;
@@ -546,6 +868,13 @@ body {
 	color: #fff;
 	height: 50px;
 }
+@media (max-width: 768px){
+	.footer__container {
+		flex-wrap: wrap;
+		height: 190px;
+		padding: 28px 0px;
+	}
+	}
 
 .footer__list{
 	display: flex; /*преобразует элементы в общий контейнер на всю ширину экрана*/
@@ -555,6 +884,13 @@ body {
 	margin: 0;
 	padding: 0;
 }
+@media (max-width: 768px){
+	.footer__list {
+		justify-content: center;
+		align-items: center;
+	}
+	}
+	
 
 .footer__link{
 	font-family: 'Inter';
@@ -571,6 +907,20 @@ body {
 	color: #BDAE82;
 }
 
+
+.header__logo1{
+	transition: 0.3s;
+	cursor: pointer;
+}
+@media (max-width: 768px){
+	.header__logo1{
+		margin-left: 0px;
+	}
+}
+
+.header__logo1:hover {
+	filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+	}
 .footer__data{
 	font-family: 'Inter';
 	font-style: normal;
@@ -581,7 +931,11 @@ body {
 	word-spacing: 20px; 
 	width: 182px;
 }
-
+@media (max-width: 768px){
+	.footer__link {
+		padding-bottom: 20px;
+	}
+}
 .git{
 	font-family: 'Inter';
 	font-style: normal;
@@ -596,5 +950,11 @@ body {
 	margin-right: 20px;
 }
 
+
+@media (max-width: 768px){
+	.footer__nav {
+		margin: 0px 11px;
+	}
+}
 
 /*Footer styles end*/
