--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -155,8 +155,8 @@ body.lock::before {
 	display: flex;
 	flex-wrap: wrap;
 	margin-left: auto;
-	width: 500px;
 	height: 50px;
+	padding-right: 30px;
 }
 @media (max-width: 768px){
 	.header__nav{
@@ -337,7 +337,6 @@ body.lock::before {
 	font-size: 20px;
 	line-height: 40px;
 	width: 470px;
-	height: 120px;
 	margin-top: 10px; 
 }
 @media (max-width: 768px){
