--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -6,6 +6,41 @@ html {
 	scroll-behavior: smooth;
   }
 
+  :root {
+	--body-color: #000;
+	--text-color: #fff;
+	--link-color:#fff;
+	--link-color-hover:#BDAE82;
+	--title-chapter:#BDAE82;
+	--title-background-color:#000;
+	--subtitle-color:#fff;
+
+	--botton-color-solid:#BDAE82;
+	--botton-color-solid-active:#fff;
+	--button-color: transparent;
+
+	--button-text:#BDAE82;
+	--button-text-active:#000;
+	--button-color-active:#BDAE82;
+	--button-color-border:#BDAE82;
+	
+	--button-price-text:#000;
+	--button-price-color:#BDAE82;
+	--button-price-text-active:#fff;
+	--button-price-color-active:#BDAE82;
+
+	--price-text:#fff;
+	--price-value:#BDAE82;
+	--input-border:#BDAE82;
+	--input-backgroud-color:transparent;
+	--placeholder-border-color:#BDAE82;
+	--placeholder-text-color:#BDAE82;
+	--placeholder-backgroud-color:transparent;
+
+	--hamburger-line-color:#fff;
+	--hamburger-background-color:#000;
+  }
+
   /* merriweather-700 - latin */
  @font-face {
 	font-family: 'Merriweather';
@@ -82,9 +117,9 @@ body.lock::before {
 	background-repeat: no-repeat;
 	background-position: top;
 	border: 0;
-	padding-left: 0px;
-	padding-right: 0px;
-	margin: 0px 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin: 0px;
   }
 
   @media (max-width: 768px){
@@ -95,10 +130,7 @@ body.lock::before {
     background-repeat: no-repeat;
 	}
   }
-  .header__theme-logo{
-	padding-left: 35px;
-  }
-
+ 
   .hamburger{
 	display: none;
 	background: none;
@@ -139,14 +171,26 @@ body.lock::before {
 .hamburger.open .line3 {
 	transform: rotate(45deg) translate(-6px, -10px);
   }
+
+  .header__theme-logo{
+	 transition: 0.3s;
+	background-image: url('./assets/img/svg/sun.svg');
+	width: 45px;
+	background-repeat:no-repeat;
+	cursor: pointer;
+	margin-left: 35px;
+  }
+
 .header__logo{
 	transition: 0.3s;
+	background-image: url('./assets/img/svg/logo.svg');
+	width: 50px;
 	cursor: pointer;
 }
 @media (max-width: 768px){
 	.header__logo{
 		margin-left: 60px;
-		margin-right: 442px;
+		margin-right: 350px;
 	}
 }
 
@@ -245,7 +289,7 @@ body.lock::before {
 	font-style: normal;
 	font-weight: 400;
 	font-size: 20px;
-	color:white;
+	color:var(--link-color);
 	text-decoration: none;
 	transition: 0.3s;
 }
@@ -290,7 +334,7 @@ body.lock::before {
 	background-image: url(../portfolio/assets/img/jpg/intro-bg.jpg);
 	background-position: center -90px;
   	background-repeat: no-repeat;
-	background-size: 125%;
+	background-size: 100%;
 	border:0;
 	padding-top: 160px;
 	padding: 0px 160 0px 0px;
@@ -429,7 +473,7 @@ body.lock::before {
 }
 
 .title__text{
-	background-color:rgb(0, 0, 0);
+	background-color:var(--title-background-color);
 	padding: 0 20px;
 }
 
@@ -490,7 +534,7 @@ body.lock::before {
 	font-size: 18px;
 	line-height: 36px;
 	text-align: center;
-	color: #FFFFFF;
+	color: var(--subtitle-color);
 	padding-top: 20px;
 	margin: 0;
 }
@@ -546,7 +590,7 @@ body.lock::before {
 	background-color: var(--button-color);
 	cursor: pointer;
 	text-align: center;
-	border-color:var(--button-color-active);
+	border-color:var(--button-color-border);
 	margin-right: 5px;
 	height: 55px;
 	width: 220px;
@@ -554,7 +598,7 @@ body.lock::before {
 }
 .bt__border.active {
 	color:var(--button-text-active);
-	background-color:#BDAE82;
+	background-color:var(--button-color-active);
 }
 
 .portfolio__items{
@@ -706,8 +750,8 @@ body.lock::before {
 	font-family: Inter;
 	font-size: 20px;
 	line-height: 40px;
-	color:black;
-	background-color:#BDAE82;
+	color: var(--button-price-text);
+	background-color: var(--button-price-color);
 	cursor: pointer;
 	text-align: center;
 	border: none;
@@ -721,7 +765,8 @@ body.lock::before {
 }
 
 .bt__price:hover {
-	color: white;
+	color: var(--button-price-text-active);
+	background-color: var(--button-price-color-active);
 }
 
 /*Price styles end*/
@@ -770,7 +815,7 @@ body.lock::before {
 	font-size: 40px;
 	line-height: 80px;
 	text-align: center;
-	color:#BDAE82;
+	color:var(--title-chapter);
 	width: 450px;
 	padding-top: 0px;
 	margin-top: 60px;
@@ -798,7 +843,7 @@ body.lock::before {
 
 ::placeholder {
 	font-family: inherit;
-	color: #bdae82;
+	color: var(--placeholder-text-color);
 	font-size: 20px;
 	padding-left: 20px;
   }
@@ -822,8 +867,7 @@ body.lock::before {
 	font-family: Inter;
 	font-size: 20px;
 	line-height: 40px;
-	color:black;
-	background-color:#BDAE82;
+	background-color: var(--botton-color-solid);
 	cursor: pointer;
 	text-align: center;
 	border: none;
@@ -851,7 +895,8 @@ body.lock::before {
 	}
 
 .bt__contact:hover {
-	color: white;
+	color: var(--button-price-text-active);
+	background-color: var(--button-price-color-active);
 }
 
 /*Contacts styles end*/ 
@@ -941,6 +986,7 @@ body.lock::before {
 	font-style: normal;
 	font-weight: 400;
 	font-size: 20px;
+	color: var(--text-color);
 	margin-left: 20px;
 	word-spacing: 20px; 
 	width: 182px;
