--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 	overflow-x:hidden;
 	display: block;
 	line-height: 1;
-	font-size: 14px;
+	font-size: 18px;
 	color: #FFF;
 	background-color:#000;
 	font-weight: 400;
@@ -73,7 +73,7 @@ body {
     bottom: 0;
 	margin: auto;
 	border-radius: 20px;
-	box-shadow: -1px -20px 80px 1px rgb(3, 93, 103);
+	box-shadow: 0px 0px 20px 1px rgb(0, 0, 0);
 	overflow: hidden;
 }
 
@@ -82,15 +82,39 @@ body {
 	width: 180%;
 	top:0px;
 }
+#poster.active{
+	animation: 
+}
 
 .container__info{
-	padding-bottom: 80px;
+	padding-bottom: 10px;
 	z-index: 3;
+	background: linear-gradient(to bottom right, rgb(0, 19, 161), pink);
+	width: 100%;
+	align-items: center;
+	display: flex;
+    flex-direction: column;
+	padding: 0px 20px;
+	padding-bottom: 10px;
 }
 
 .info-song{
 	bottom: 0px;
-	margin-bottom: 20px;
+	width: 100%;
+	margin-bottom: 10px;
+	text-align: center;
+}
+
+.info-song__title{
+	padding-top: 8px;
+	font-size: 20px;
+	
+}
+
+.info-song__subtitle{
+	padding-top: 10px;
+	color: rgb(0, 251, 255);
+	
 }
 /*--------BUTTONS---------------------------------------------------------------------------*/
 button {
@@ -125,6 +149,23 @@ button {
 
 }
 
+/*--------PLAYER---------------------------------------------------------------------------*/
+
+.progress__container {
+	height: 10px;
+	width: 100%;
+	background: rgb(255, 255, 255);
+	border-radius: 5px;
+	margin: 10px 0px;
+	display: flex;
+	align-items: center;
+	cursor: pointer;
+}
+.progress {
+	height: 6px;
+	background: rgb(0, 251, 255);
+	border-radius: 5px;
+}
 
 /*--------FOOTER---------------------------------------------------------------------------*/
 
@@ -133,6 +174,7 @@ button {
 	width: 100%;
 	height: 5%;
 	top: 95%;
+	left:0;
 	background-color:#000;
 }
 .footer__container{
