--- a/memory-game/style.css
+++ b/memory-game/style.css
@@ -44,9 +44,8 @@ body {
 
 .wrapper{
 	width: 100%;
-	height: auto;
+	height: 100%;
 }
-
 /*--------MAIN---------------------------------------------------------------------------*/
 
 .main{
@@ -55,6 +54,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+	margin-top: 50px;
 }
 
 img {
@@ -133,18 +133,26 @@ img {
 	content: " steps";
   }
 
+
   .start-game__button{
-	margin-top: 14px;
 	background-color: rgb(255, 255, 255);
 	color:blue;
 	font-size: 18px;
 	border-radius: 4px;
 	width: 140px;
 	height: 34px;
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: auto;
+	z-index: 20;
 }
-.start-game__button:active{
-	background-color: blue;
-	color:rgb(255, 255, 255);
+.start-game__button.hidden{
+	display: none;
+	opacity: 0;
+	z-index: -1;
 }
 .start-game__button:hover{
 	background-color: rgb(26, 255, 0);
