--- a/memory-game/style.css
+++ b/memory-game/style.css
@@ -54,7 +54,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-	margin-top: 50px;
+	margin-top: 20px;
 }
 
 img {
@@ -161,7 +161,7 @@ img {
 }
 /*--------END GAME POSTER---------------------------------------------------------------------------------*/
 .result {
-	margin-top: 240px;
+	margin-top: 170px;
 	width: 300px;
 	height: 160px;
 	background-color: white;
@@ -171,7 +171,7 @@ img {
   	display: flex;
   	flex-direction: column;
   	justify-content: center;
- 	align-items: center;
+ 	align-items: center;пш
   	border-radius: 4px;
 }
 .win{
